task-04: в gateway добавлен метод регистрации
