# shared/api/gateway/v1/gateway.openapi.yaml
@@ -15,6 +15,8 @@ tags:
     description: "Операции с колонками"
   - name: Task
     description: "Операции с задачами"
+  - name: Auth
+    description: "Операции с пользователями"
 
 paths:
   /api/v1/boards:
@@ -394,6 +396,39 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/GenericError"
+  /api/v1/auth/register:
+    post:
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RegisterRequestBody"
+      summary: "Регистрация пользователя"
+      operationId: AuthRegister
+      tags:
+        - Auth
+      responses:
+        '201':
+          description: "Пользователь успешно зарегистрирован"
+        '400':
+          description: "Ошибка запроса"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestError"
+        '500':
+          description: "Ошибка сервера"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InternalServerError"
+        default:
+          description: "Прочие ошибки"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericError"
 components:
   schemas:
     CreateBoardRequestBody:
@@ -471,6 +506,25 @@ components:
           type: string
           description: "Ответственный по задаче"
           example: "Assignee"
+    RegisterRequestBody:
+      type: object
+      required:
+        - email
+        - password
+        - username
+      properties:
+        email:
+          type: string
+          description: "Email нового пользователя"
+          example: "test@test.ru"
+        password:
+          type: string
+          description: "Пароль нового пользователя"
+          example: "123qwe"
+        username:
+          type: string
+          description: "Имя нового пользователя"
+          example: "test"
     CreateBoardResponse:
       type: object
       required:
