# shared/pkg/openapi/gateway/v1/oas_response_encoders_gen.go
@@ -12,6 +12,45 @@ import (
 	"go.opentelemetry.io/otel/trace"
 )
 
+func encodeAuthRegisterResponse(response AuthRegisterRes, w http.ResponseWriter, span trace.Span) error {
+	switch response := response.(type) {
+	case *AuthRegisterCreated:
+		w.WriteHeader(201)
+		span.SetStatus(codes.Ok, http.StatusText(201))
+
+		return nil
+
+	case *BadRequestError:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(400)
+		span.SetStatus(codes.Error, http.StatusText(400))
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	case *InternalServerError:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(500)
+		span.SetStatus(codes.Error, http.StatusText(500))
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	default:
+		return errors.Errorf("unexpected response type: %T", response)
+	}
+}
+
 func encodeBoardCreateResponse(response BoardCreateRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *CreateBoardResponse:
